--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -64,7 +64,7 @@ const footerLinks = [
       </div>
 
       <!-- Col 4: Links (Bold Italic 16px) -->
-      <nav class="flex flex-col gap-2">
+      <nav class="flex flex-col gap-2 items-end">
         {
           footerLinks.map((link) => (
             <a
