--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -19,10 +19,10 @@ const navItems: NavItem[] = [
 ];
 ---
 
-<header class="fixed top-0 left-0 w-full z-50 transition-all duration-300">
-  <div
-    class="container mx-auto px-6 h-36 flex items-center justify-between bg-white"
-  >
+<header
+  class="fixed top-0 left-0 w-full z-50 transition-all duration-300 bg-white"
+>
+  <div class="container mx-auto px-6 h-36 flex items-center justify-between">
     <!--
       1. LOGO
       Using SVGR component allows us to style the internal paths.
@@ -68,7 +68,7 @@ const navItems: NavItem[] = [
               <a
                 href={item.href}
                 class={cn(
-                  "text-base font-bold italic text-brand-dark hover:text-brand-green transition-colors uppercase tracking-wide",
+                  "text-base font-bold italic text-brand-dark hover:text-brand-green transition-colors",
                   needsMargin && "mr-5",
                 )}
               >
