--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import BenefitsRow from "../components/home/BenefitsRow.astro";
+import AboutUs from "../components/home/AboutUs.astro";
 ---
 
 <Layout title="Sítovka.net | Marketingová Agentura">
   <main>
     <!-- We will add the Hero here later -->
 
-    <!-- Benefits Row -->
-    <BenefitsRow />
+    <!-- About Us Section (Benefits + Bio) -->
+    <AboutUs />
 
     <!-- Other sections will follow -->
   </main>
