--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import AboutUs from "../components/home/AboutUs.astro";
+import ServicesSection from "../components/home/ServicesSection.astro";
 ---
 
 <Layout title="Sítovka.net | Marketingová Agentura">
@@ -9,6 +10,9 @@ import AboutUs from "../components/home/AboutUs.astro";
 
     <!-- About Us Section (Benefits + Bio) -->
     <AboutUs />
+
+    <!-- Services Section (Co umíme) -->
+    <ServicesSection />
 
     <!-- Other sections will follow -->
   </main>
